rewrite claim commands