@@ -1,5 +1,7 @@
 package dev.cammiescorner.townships.component.level;
 
+import com.mojang.serialization.Codec;
+import dev.cammiescorner.townships.component.scoreboard.TownsComponent;
 import dev.cammiescorner.townships.init.TownshipsComponents;
 import dev.cammiescorner.townships.util.Town;
 import net.minecraft.core.UUIDUtil;
@@ -11,88 +13,53 @@ import net.minecraft.world.level.storage.ValueOutput;
 import org.ladysnake.cca.api.v8.component.CardinalComponent;
 
 import java.util.*;
+import java.util.function.Function;
 
 public class ClaimsComponent implements CardinalComponent {
+
+	private static final Codec<Map<UUID, List<ChunkPos>>> CODEC = Codec.unboundedMap(
+			UUIDUtil.STRING_CODEC,
+			ChunkPos.CODEC.listOf().xmap(ArrayList::new, Function.identity()) // ensure mutable lists
+	);
+
 	private final Map<UUID, List<ChunkPos>> townClaims = new HashMap<>();
-	private final Level level;
+	private final ServerLevel level;
 
 	public ClaimsComponent(Level level) {
-		this.level = level;
+		this.level = level instanceof ServerLevel serverLevel ? serverLevel : null;
 	}
 
 	@Override
-	public void readData(ValueInput readView) {
+	public void readData(ValueInput input) {
 		townClaims.clear();
-
-		var claimsList = readView.childrenListOrEmpty("TownClaims");
-
-		for(ValueInput input : claimsList) {
-			List<ChunkPos> list = new ArrayList<>();
-			var posList = input.childrenListOrEmpty("ChunkPoses");
-			var townId = input.read("TownId", UUIDUtil.CODEC);
-
-			for(ValueInput i : posList) {
-				list.add(new ChunkPos(i.getIntOr("X", 0), i.getIntOr("Z", 0)));
-			}
-
-			townId.ifPresent(uuid -> townClaims.put(uuid, list));
-		}
+		input.read("claims", CODEC).ifPresent(townClaims::putAll);
 	}
 
 	@Override
-	public void writeData(ValueOutput writeView) {
-		var claimsList = writeView.childrenList("TownClaims");
-
-		townClaims.forEach((townId, chunkPos) -> {
-			var output = claimsList.addChild();
-			var posList = output.childrenList("ChunkPoses");
-
-			output.store("TownId", UUIDUtil.CODEC, townId);
-
-			for(ChunkPos pos : chunkPos) {
-				var o = posList.addChild();
-
-				o.putInt("X", pos.x());
-				o.putInt("Z", pos.z());
-			}
-		});
+	public void writeData(ValueOutput output) {
+		output.store("claims", CODEC, townClaims);
 	}
 
 	public List<ChunkPos> getChunks(UUID uuid) {
-		return List.copyOf(townClaims.getOrDefault(uuid, List.of()));
+		return Collections.unmodifiableList(townClaims.getOrDefault(uuid, List.of()));
 	}
 
 	public void addChunk(UUID uuid, ChunkPos pos) {
-		if(!townClaims.containsKey(uuid))
-			return;
-
-		var chunks = townClaims.get(uuid);
-
-		chunks.add(pos);
-
-		townClaims.replace(uuid, chunks);
+		townClaims.computeIfAbsent(uuid, _ -> new ArrayList<>()).add(pos);
 	}
 
 	public void removeChunk(UUID uuid, ChunkPos pos) {
-		if(!townClaims.containsKey(uuid))
-			return;
-
-		var chunks = townClaims.get(uuid);
-
-		chunks.remove(pos);
-
-		townClaims.replace(uuid, chunks);
+		townClaims.computeIfAbsent(uuid, _ -> new ArrayList<>()).remove(pos);
 	}
 
-	public Town getTown(ServerLevel level, ChunkPos pos) {
-		var townData = level.getScoreboard().getComponent(TownshipsComponents.TOWNS_COMPONENT);
-		Town town = null;
+	public Optional<Town> getTownAt(ChunkPos pos) {
+		var townData = TownsComponent.get(level);
 
-		for(Map.Entry<UUID, List<ChunkPos>> entry : townClaims.entrySet()) {
-			if(entry.getValue().contains(pos))
-				town = townData.getTown(entry.getKey());
-		}
+		return townClaims.entrySet().stream().filter(e -> e.getValue().contains(pos)).findFirst()
+				.map(Map.Entry::getKey).flatMap(townData::getTown);
+	}
 
-		return town;
+	public static ClaimsComponent get(ServerLevel level) {
+		return level.getComponent(TownshipsComponents.CLAIMS_COMPONENT);
 	}
 }
